components/common/modal/modal.module.scss
.outer {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 600;
  overflow: hidden;
  padding: 24px;
}

.inner {
  overflow: hidden;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-size: 16px;
  background-color: var(--white);
  border-radius: 10px;
}

.message {
  width: 100%;
  overflow-wrap: break-word;
  text-align: center;
  padding: 24px;
}

.buttonContainer {
  display: flex;
  height: 64px;
  width: 100%;
}

